--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "ansi-colors": "^3.2.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
+    "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
     "redux": "4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "4.1.3"
   },
   "devDependencies": {},
