--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
   "main": "src/index.js",
   "dependencies": {
     "ansi-colors": "^3.2.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "fs": "0.0.1-security",
+    "jest-cli": "^23.6.0",
+    "jest-enzyme": "^7.0.1",
+    "node-sass": "^4.11.0",
     "react": "16.5.2",
+    "react-docgen": "^2.21.0",
     "react-dom": "16.5.2",
+    "react-fake-props": "^0.3.1",
     "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
     "redux": "4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "sfcookies": "^1.0.2",
     "styled-components": "4.1.3"
   },
   "devDependencies": {},
@@ -27,5 +37,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js",
+      "!src/setupTests.js",
+      "!src/tempPolyfills.js"
+    ]
+  }
 }
