--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@heroku/update-node-build-script": "^1.0.2",
     "ansi-colors": "^3.2.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "browserslist": [
     ">0.2%",
@@ -45,5 +47,6 @@
       "!src/setupTests.js",
       "!src/tempPolyfills.js"
     ]
-  }
+  },
+  "heroku-run-build-script": true
 }
