--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kanban",
   "version": "1.0.0",
+  "license": "MIT",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
