--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/react-dom": "^17.0.0",
     "ansi-colors": "^4.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
