--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.15",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.11",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
     "ansi-colors": "^4.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -26,7 +30,8 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "^10.0.2",
     "sfcookies": "^1.0.2",
-    "styled-components": "5.2.0"
+    "styled-components": "5.2.0",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {},
   "scripts": {
@@ -44,9 +49,24 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.js",
+      "src/**/*.ts*",
       "!src/index.js",
       "!src/setupTests.js",
       "!src/tempPolyfills.js"
     ]
+  },
+  "wallaby": {
+    "files": [
+      "src/**/*.ts",
+      "!src/**/*.spec.ts"
+    ],
+    "tests": [
+      "src/**/*.spec.ts"
+    ],
+    "env": {
+      "type": "node"
+    },
+    "testFramework": "jest",
+    "debug": true
   }
 }
